--- a/views/layout.html
+++ b/views/layout.html
@@ -5,11 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <title>Things App</title>
 </head>
 
 <body>
 
+  <!-- Here we are just going to do a container class -->
+  <!-- .container for emmet -->
+  <div class="container">
+    <!-- 
+      We want to output everything right here
+      any view that we create where we extend this layout should be output here
+      lets do it with ejs. 
+     -->
+    <%- body %>
+  </div>
 </body>
 
 </html>
