Updated this app so we can actually add things to the array from the webpage and it gets updated on the index

--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,11 @@
-<h1>Things I Love</h1>
+<h1>
+  <%- title %>
+</h1>
+
+<ul class="list-group">
+  <% thingsView.forEach(thing => { %>
+  <li class="list-group-item">
+    <%= thing %>
+  </li>
+  <% }); %>
+</ul>
